--- a/happy-system/pom.xml
+++ b/happy-system/pom.xml
@@ -12,5 +12,21 @@
     <artifactId>happy-system</artifactId>
     <description>系统模块</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.happy</groupId>
+            <artifactId>happy-common</artifactId>
+        </dependency>
+    </dependencies>
 </project>
