--- a/happy-common/pom.xml
+++ b/happy-common/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
