--- a/happy-web/src/main/resources/application.yml
+++ b/happy-web/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/sp_test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://192.168.0.208:13306/sp_test?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: 12345678
+    password: slyours@123
 
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
@@ -18,10 +18,10 @@ spring:
       write-dates-as-timestamps: false
 
   redis:
-    host: 127.0.0.1
-    port: 6379
+    host: 192.168.0.208
+    port: 16379
     database: 2
-    password: xiaofeng
+    password: slyours@123
 
   servlet:
     multipart:
