--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,12 @@
         <javax.version>4.0.1</javax.version>
         <happy.version>0.0.1</happy.version>
         <java.version>1.8</java.version>
+        <orika.version>1.5.4</orika.version>
         <hutool-all.version>5.3.3</hutool-all.version>
         <fastjson.version>1.2.78</fastjson.version>
         <lombok.version>1.18.20</lombok.version>
         <kaptcha.version>0.0.9</kaptcha.version>
-        <knife4j.version>2.0.9</knife4j.version>
+        <knife4j.version>3.0.2</knife4j.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -140,6 +141,13 @@
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-spring-boot-starter</artifactId>
                 <version>${knife4j.version}</version>
+            </dependency>
+
+            <!--急速转换对象-->
+            <dependency>
+                <groupId>ma.glasnost.orika</groupId>
+                <artifactId>orika-core</artifactId>
+                <version>${orika.version}</version>
             </dependency>
 
             <dependency>
