--- a/happy-common/pom.xml
+++ b/happy-common/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>orika-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
