--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <fastjson.version>1.2.78</fastjson.version>
         <lombok.version>1.18.20</lombok.version>
         <kaptcha.version>0.0.9</kaptcha.version>
+        <minio.version>7.1.0</minio.version>
         <knife4j.version>2.0.9</knife4j.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -148,6 +149,12 @@
                 <groupId>ma.glasnost.orika</groupId>
                 <artifactId>orika-core</artifactId>
                 <version>${orika.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.minio</groupId>
+                <artifactId>minio</artifactId>
+                <version>${minio.version}</version>
             </dependency>
 
             <dependency>
