--- a/happy-admin/pom.xml
+++ b/happy-admin/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>happy-web</artifactId>
+    <artifactId>happy-admin</artifactId>
     <description>api服务入口</description>
 
     <packaging>jar</packaging>
