--- a/happy-framework/pom.xml
+++ b/happy-framework/pom.xml
@@ -35,6 +35,16 @@
         </dependency>
 
         <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-dao-redis</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.happy</groupId>
             <artifactId>happy-common</artifactId>
         </dependency>
