--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <javax.version>4.0.1</javax.version>
         <happy.version>0.0.1</happy.version>
         <java.version>1.8</java.version>
+        <sa-token.version>1.28.0</sa-token.version>
         <orika.version>1.5.4</orika.version>
         <hutool-all.version>5.3.3</hutool-all.version>
         <fastjson.version>1.2.78</fastjson.version>
@@ -103,11 +104,11 @@
                 <version>${jjwt.version}</version>
             </dependency>
 
-            <!--            <dependency>-->
-            <!--                <groupId>com.alibaba</groupId>-->
-            <!--                <artifactId>druid-spring-boot-starter</artifactId>-->
-            <!--                <version>${druid.version}</version>-->
-            <!--            </dependency>-->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.baomidou</groupId>
@@ -164,6 +165,18 @@
                 <groupId>ma.glasnost.orika</groupId>
                 <artifactId>orika-core</artifactId>
                 <version>${orika.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-spring-boot-starter</artifactId>
+                <version>${sa-token.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.dev33</groupId>
+                <artifactId>sa-token-dao-redis</artifactId>
+                <version>${sa-token.version}</version>
             </dependency>
 
             <dependency>
