--- a/happy-admin/src/main/resources/application.yml
+++ b/happy-admin/src/main/resources/application.yml
@@ -6,10 +6,11 @@ spring:
     name: happy211-admin-api
 
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/happy214?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: 12345678
+    druid:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://127.0.0.1:3306/happy214?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+      username: root
+      password: 12345678
 
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
@@ -70,4 +71,4 @@ minio:
   bucketName: mlcloud
 
 logs:
-  path: logs
+  path: ./logs
