--- a/happy-system/pom.xml
+++ b/happy-system/pom.xml
@@ -15,6 +15,11 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.happy</groupId>
             <artifactId>happy-common</artifactId>
         </dependency>
