--- a/cloud/happy-framework/pom.xml
+++ b/cloud/happy-framework/pom.xml
@@ -53,6 +53,11 @@
             <groupId>com.happy</groupId>
             <artifactId>happy-system</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
