--- a/template/package.json
+++ b/template/package.json
@@ -28,6 +28,7 @@
     "qs": "^6.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.0.2",
+    "react-json-view": "^1.21.3",
     "react-redux": "^8.0.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.1.1",
